--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Click the button below to add a new task!
         </p>
 
-        <button class="btn">Add Task</button>
+        <button class="btn" id="save-task">Add Task</button>
 
     </header>
 
@@ -26,7 +26,7 @@
 
             <h2 class="list-title">Tasks To Do</h2>
 
-            <ul class="task-list">
+            <ul class="task-list" id="tasks-to-do">
                 <li class="task-item">A task is going to be added soon!</li>
             </ul>
 
